--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
             <a href="Chapter_2/listing_primes.html">
                 <h2><hyperlink>2.1 Listing Primes</hyperlink></h2>
             </a>
+            <a href="Chapter_2/solving_pell_equation.html">
+                <h2><hyperlink>2.2 Solving Pell Equation</hyperlink></h2>
+            </a>
         </div>
     </body>
 </html>
