chapter two 2/3 finished

--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
             <a href="Chapter_2/solving_pell_equation.html">
                 <h2><hyperlink>2.2 Solving Pell Equation</hyperlink></h2>
             </a>
+            <a href="Chapter_2/sum_of_two_primes.html">
+                <h2><hyperlink>2.3 Numbers as the sum of two primes</hyperlink></h2>
+            </a>
         </div>
     </body>
 </html>
