--- a/index.html
+++ b/index.html
@@ -29,7 +29,11 @@
             </a>
             <a href="Chapter_2/sum_of_two_primes.html">
                 <h2><hyperlink>2.3 Numbers as the sum of two primes</hyperlink></h2>
-            </a>
+            </a><br>
+
+            <a href="">
+                <h2><hyperlink>3.1</hyperlink></h2>
+            </a><br>
         </div>
     </body>
 </html>
