chapter3 almost finished

--- a/index.html
+++ b/index.html
@@ -31,9 +31,12 @@
                 <h2><hyperlink>2.3 Numbers as the sum of two primes</hyperlink></h2>
             </a><br>
 
-            <a href="">
-                <h2><hyperlink>3.1</hyperlink></h2>
-            </a><br>
+            <a href="Chapter_3/recursive_factorial.html">
+                <h2><hyperlink>3.1 Recursive Factorial</hyperlink></h2>
+            </a>
+            <a href="Chapter_3/pascals_triangle.html">
+                <h2><hyperlink>3.2 Pascal's Triangle</hyperlink></h2>
+            </a>
         </div>
     </body>
 </html>
