--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
             </a>
             <a href="Chapter_3/pascals_triangle.html">
                 <h2><hyperlink>3.2 Pascal's Triangle</hyperlink></h2>
+            </a><br>
+
+            <a href="Chapter_4/gcd.html">
+                <h2><hyperlink>4.1 GCD</hyperlink></h2>
             </a>
         </div>
     </body>
