prime decomposition completed

--- a/index.html
+++ b/index.html
@@ -7,40 +7,68 @@
     <body>
         <h1 class="center">Elementary Number Theory With Programming<br>. . .</h1>
         <div class="container">
-        
-            <a href="Chapter_1/triangular_numbers.html">
-                <h2><hyperlink>1.1 Triangular Numbers</hyperlink></h2>
-            </a>
-            <a href="Chapter_1/proper_factors.html">
-                <h2><hyperlink>1.2 Proper Factors</hyperlink></h2>
-            </a>
-            <a href="Chapter_1/deficient_perfect_or_abundant.html">
-                <h2><hyperlink>1.3 Deficient, Perfect or Abundant</hyperlink></h2>
-            </a>
-            <a href="Chapter_1/no_perfect_odd_number.html">
-                <h2><hyperlink>1.4 Checking the Conjecture on No Perfect Odd Number</hyperlink></h2>
-            </a><br>
+            <div class="center-subheaders-index">
+                <a href="Chapter_1/triangular_numbers.html">
+                    <h2>
+                        <hyperlink>1.1 Triangular Numbers</hyperlink>
+                    </h2>
+                </a>
+                <a href="Chapter_1/proper_factors.html">
+                    <h2>
+                        <hyperlink>1.2 Proper Factors</hyperlink>
+                    </h2>
+                </a>
+                <a href="Chapter_1/deficient_perfect_or_abundant.html">
+                    <h2>
+                        <hyperlink>1.3 Deficient, Perfect or Abundant</hyperlink>
+                    </h2>
+                </a>
+                <a href="Chapter_1/no_perfect_odd_number.html">
+                    <h2>
+                        <hyperlink>1.4 Checking the Conjecture on No Perfect Odd Number</hyperlink>
+                    </h2>
+                </a><br>
 
-            <a href="Chapter_2/listing_primes.html">
-                <h2><hyperlink>2.1 Listing Primes</hyperlink></h2>
-            </a>
-            <a href="Chapter_2/solving_pell_equation.html">
-                <h2><hyperlink>2.2 Solving Pell Equation</hyperlink></h2>
-            </a>
-            <a href="Chapter_2/sum_of_two_primes.html">
-                <h2><hyperlink>2.3 Numbers as the sum of two primes</hyperlink></h2>
-            </a><br>
+                <a href="Chapter_2/listing_primes.html">
+                    <h2>
+                        <hyperlink>2.1 Listing Primes</hyperlink>
+                    </h2>
+                </a>
+                <a href="Chapter_2/solving_pell_equation.html">
+                    <h2>
+                        <hyperlink>2.2 Solving Pell Equation</hyperlink>
+                    </h2>
+                </a>
+                <a href="Chapter_2/sum_of_two_primes.html">
+                    <h2>
+                        <hyperlink>2.3 Numbers as the sum of two primes</hyperlink>
+                    </h2>
+                </a><br>
 
-            <a href="Chapter_3/recursive_factorial.html">
-                <h2><hyperlink>3.1 Recursive Factorial</hyperlink></h2>
-            </a>
-            <a href="Chapter_3/pascals_triangle.html">
-                <h2><hyperlink>3.2 Pascal's Triangle</hyperlink></h2>
-            </a><br>
+                <a href="Chapter_3/recursive_factorial.html">
+                    <h2>
+                        <hyperlink>3.1 Recursive Factorial</hyperlink>
+                    </h2>
+                </a>
+                <a href="Chapter_3/pascals_triangle.html">
+                    <h2>
+                        <hyperlink>3.2 Pascal's Triangle</hyperlink>
+                    </h2>
+                </a><br>
 
-            <a href="Chapter_4/gcd.html">
-                <h2><hyperlink>4.1 GCD</hyperlink></h2>
-            </a>
+                <a href="Chapter_4/gcd.html">
+                    <h2>
+                        <hyperlink>4.1 GCD</hyperlink>
+                    </h2>
+                </a>
+                <a href="Chapter_4/prime_decomposition.html">
+                    <h2>
+                        <hyperlink>4.2 Prime Decomposition</hyperlink>
+                    </h2>
+                </a>
+            </div>
         </div>
     </body>
+    <footer>
+    </footer>
 </html>
