--- a/index.html
+++ b/index.html
@@ -66,6 +66,11 @@
                         <hyperlink>4.2 Prime Decomposition</hyperlink>
                     </h2>
                 </a>
+                <a href="Chapter_4/lcm.html">
+                    <h2>
+                        <hyperlink>4.3 LCM</hyperlink>
+                    </h2>
+                </a>
             </div>
         </div>
     </body>
